Add irq and ce line

--- a/modules/nrf24l01/nrf24l01.dts
+++ b/modules/nrf24l01/nrf24l01.dts
@@ -36,8 +36,9 @@
                                 compatible = "nordicsemi,nrf24l01";
                                 spi-max-frequency = <500000>;
                                 reg = <1>;
-                                interrupts = <23 8>;
+                                interrupts = <18 2>;
                                 interrupt-parent = <&gpio>;
+                                nrf-ce = <17>;
                         };
 
                 };
