Introduce nrf worker

--- a/modules/nrf24l01/Kbuild
+++ b/modules/nrf24l01/Kbuild
@@ -1,5 +1,5 @@
 obj-m := nrf24l01.o
 ccflags-y := -O3
-nrf24l01-y := nrf24l01_spi.o nrf24l01_chrdev.o nrf24l01_functions.o partregmap.o nrf24l01_core.o nrf24l01_reg.o
+nrf24l01-y := nrf24l01_spi.o nrf24l01_chrdev.o nrf24l01_functions.o partregmap.o nrf24l01_core.o nrf24l01_worker.o nrf24l01_reg.o
 nrf24l01-objs := $(nrf24l01-y)
 
