--- a/modules/nrf24l01/nrf24l01.dts
+++ b/modules/nrf24l01/nrf24l01.dts
@@ -39,6 +39,7 @@
                                 interrupts = <18 2>;
                                 interrupt-parent = <&gpio>;
                                 nrf-ce = <17>;
+                                nrf-mode = <0>;
                         };
 
                 };
