Add big endian addressing mode @Manawyrm requested this repeatedly because some common libraries use BE for addresses

--- a/modules/nrf24l01/nrf24l01.dts
+++ b/modules/nrf24l01/nrf24l01.dts
@@ -40,6 +40,7 @@
                                 interrupt-parent = <&gpio>;
                                 nrf-ce = <17>;
                                 nrf-mode = <2>;
+                                nrf-addr-be = <0>;
                         };
 
                 };
