Rename param 'rotation' to 'rotate'
It is just a flag now because you can achieve any n * 9o degree rotation by combining a 90 degree rotation and flipping

--- a/modules/adafruit-matrix-rpi/adamtx.dts
+++ b/modules/adafruit-matrix-rpi/adamtx.dts
@@ -21,6 +21,7 @@
                                         adamtx-real-y = <0>;
                                         adamtx-flip-x = <1>;
                                         adamtx-flip-y = <0>;
+                                        adamtx-rotate = <0>;
                                         adamtx-chain = <1>;
                                 };
                                 lower-panel@1 {
@@ -32,6 +33,7 @@
                                         adamtx-real-y = <32>;
                                         adamtx-flip-x = <1>;
                                         adamtx-flip-y = <0>;
+                                        adamtx-rotate = <0>;
                                         adamtx-chain = <0>;
                                 };
                         };
