--- a/modules/adafruit-matrix-rpi/Kbuild
+++ b/modules/adafruit-matrix-rpi/Kbuild
@@ -1,4 +1,4 @@
-obj-m := adafruit_matrix.o
+obj-m := adamtx.o
 ccflags-y := -Ofast
-adafruit-matrix-y := matrix.o adafruit-matrix.o io.o
-adafruit_matrix-objs := $(adafruit-matrix-y)
+adamtx-y := adafruit_matrix.o matrix.o io.o
+adamtx-obs := $(adamtx-y)
