Make peripheral base address configureable

--- a/modules/adafruit-matrix-rpi/adamtx_dma.dts
+++ b/modules/adafruit-matrix-rpi/adamtx_dma.dts
@@ -17,6 +17,8 @@
                                 adamtx-bind-draw = <3>;
                                 adamtx-bind-update = <2>;
                                 adamtx-dma = <1>;
+                                adamtx-peripheral-base = <0x3F000000>;
+
                                 upper-panel@0 {
                                         adamtx-xres = <32>;
                                         adamtx-yres = <16>;
