Add peripheral base address

--- a/modules/adafruit-matrix-rpi/adamtx.dts
+++ b/modules/adafruit-matrix-rpi/adamtx.dts
@@ -14,6 +14,8 @@
                                 adamtx-fb-rate = <60>;
                                 adamtx-bind-draw = <3>;
                                 adamtx-bind-update = <2>;
+                                adamtx-peripheral-base = <0x3F000000>;
+
                                 upper-panel@0 {
                                         adamtx-xres = <64>;
                                         adamtx-yres = <32>;
