Use color model and gamma correction

--- a/modules/adafruit-matrix-rpi/Kbuild
+++ b/modules/adafruit-matrix-rpi/Kbuild
@@ -1,4 +1,4 @@
 obj-m := adamtx.o
 ccflags-y := -Ofast
-adamtx-y := adafruit_matrix.o matrix.o io.o
+adamtx-y := adafruit_matrix.o matrix.o io.o color.o gamma.o
 adamtx-obs := $(adamtx-y)
